Implement dataset export
A dataset can be exported in its entirety - i.e, all fields will be
exported, or one can select a subset of fields to export. Selecting a
smaller subset will make the export take less time.

The dataset records will all be written to a single file that is
compressed and encrypted zip archive.

Export also supports depseudonymizing fields within the dataset.